--- a/FtvApp-Watch-App-Info.plist
+++ b/FtvApp-Watch-App-Info.plist
@@ -8,5 +8,7 @@
 	<array>
 		<string>workout-processing</string>
 	</array>
+	<key>WKRunsIndependentlyOfCompanionApp</key>
+	<true/>
 </dict>
 </plist>
