info plist e bundle do carai

--- a/FtvApp/Info.plist
+++ b/FtvApp/Info.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSMotionUsageDescription</key>
-	<string>Este app usa dados de movimento para detectar saltos</string>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
 </dict>
 </plist>
